# PySideFlask

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
example/: app.py  routes.py
example/templates/: index.html
pyfladesk/: __init__.py
pysideflask/: __init__.py
